--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@
         @apply max-w-full w-[1440px] px-5 mx-auto;
     }
 
-    .button {
+    .btn {
         @apply bg-primaryColor py-[15px] px-[35px] rounded-[50px] text-white font-[600] mt-[38px];
     }
 
@@ -24,6 +24,11 @@
 
     .text__para {
         @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
+    }
+
+    .header {
+        @apply bg-[url("./assets/images/mask.png")] bg-no-repeat bg-center bg-cover w-full
+        h-[100px] leading-[100px];
     }
 
 }
