--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@
 
 @layer components{
     .container {
-        @apply max-w-full w-[1440px] px-5 mx-auto;
+        @apply max-w-full w-[1440px] px-5 mx-auto py-[15px];
     }
 
     .btn {
